@@ -21,6 +21,7 @@ package co.rsk.net.messages;
 import co.rsk.config.RskSystemProperties;
 import co.rsk.crypto.Keccak256;
 import co.rsk.net.*;
+import co.rsk.net.sync.SnapProcessor;
 import co.rsk.scoring.EventType;
 import co.rsk.scoring.PeerScoringManager;
 import org.ethereum.TestUtils;
@@ -35,7 +36,6 @@ import java.net.InetAddress;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -50,7 +50,7 @@ class MessageVisitorTest {
     private PeerScoringManager peerScoringManager;
     private TransactionGateway transactionGateway;
     private SyncProcessor syncProcessor;
-    private SnapshotProcessor snapshotProcessor;
+    private SnapProcessor snapshotProcessor;
     private BlockProcessor blockProcessor;
     private RskSystemProperties config;
 
@@ -59,7 +59,7 @@ class MessageVisitorTest {
         config = mock(RskSystemProperties.class);
         blockProcessor = mock(BlockProcessor.class);
         syncProcessor = mock(SyncProcessor.class);
-        snapshotProcessor = mock(SnapshotProcessor.class);
+        snapshotProcessor = mock(SnapProcessor.class);
         transactionGateway = mock(TransactionGateway.class);
         peerScoringManager = mock(PeerScoringManager.class);
         channelManager = mock(ChannelManager.class);
@@ -451,8 +451,7 @@ class MessageVisitorTest {
         invalidTransactions.add(invalidTx);
 
         when(message.getTransactions())
-                .thenReturn(Stream.concat(validTransactions.stream(), invalidTransactions.stream())
-                        .collect(Collectors.toList()));
+                .thenReturn(Stream.concat(validTransactions.stream(), invalidTransactions.stream()).toList());
         when(blockProcessor.hasBetterBlockToSync()).thenReturn(false);
 
         target.apply(message);
